--- a/13 Social network analysis.ipynb
+++ b/13 Social network analysis.ipynb
@@ -158,13 +158,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We're going to find the key conspirators in the American Revolution through social network analysis by reproducing this analysis by Prof. Kieran Healy:\n",
+    "We're going to find the key conspirators in the American Revolution through social network analysis. In particular, we will reproduce parts this analysis by Prof. Kieran Healy:\n",
     "\n",
     "https://kieranhealy.org/blog/archives/2013/06/09/using-metadata-to-find-paul-revere/\n",
     "\n",
     "(If you don't have a working internet connection, you can look at `FindingPaulRevere.pdf` in the same folder as this notebook.)\n",
     "\n",
-    "Prof. Healy used R to perform his analysis; we will use Python."
+    "Prof. Healy used R to perform his analysis. Naturally, we will use Python."
    ]
   },
   {
