--- a/13 Social network analysis.ipynb
+++ b/13 Social network analysis.ipynb
@@ -662,7 +662,7 @@
    "source": [
     "Finally, put the last two parts together to produce a chart with the top 5 American revolutionaries, ranked by normalized degree. Your chart should have columns for rank, name and normalized degree. It should have a row for each of the five revolutionaries.\n",
     "\n",
-    "_Challenge._ Can you write the names so that they don't have the odd formatting? Hint: use the `.split()` method for strings, described [here in the documentation]."
+    "_Challenge._ Can you write the names so that they don't have the odd formatting? Hint: use the `.split()` method for strings, described [here in the documentation](https://docs.python.org/3.7/library/stdtypes.html#str.split)."
    ]
   },
   {
