--- a/13 Social network analysis.ipynb
+++ b/13 Social network analysis.ipynb
@@ -754,7 +754,7 @@
     "    print(f'{rank:5s} {name:25s} {measure_name:s}')\n",
     "    \n",
     "    # Print top `many` names by measure\n",
-    "    for i in range(5):\n",
+    "    for i in range(many):\n",
     "        name_split = name_list[idx[i]].split('.')\n",
     "        full_name = f'{name_split[1]} {name_split[0]}'\n",
     "        print(f'{(i+1):<5d} {full_name:25s} {measure_list[idx[i]]:0.4f}')\n",
@@ -1045,7 +1045,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The difference in 2-norm between our v and the output from the Networkx PageRank algorithm is 5.551272285650392e-05.\n"
+      "The difference in 2-norm between our v and the output from the Networkx PageRank algorithm is 5.511431603173813e-05.\n"
      ]
     }
    ],
