--- a/13 Social network analysis.ipynb
+++ b/13 Social network analysis.ipynb
@@ -134,7 +134,7 @@
    "source": [
     "Now we're going to create the adjacency matrix:\n",
     "\n",
-    "- Use the `@` operator and the `.transpose()` method to create the adjacency matrix $M = A*A^T$.\n",
+    "- Use the `@` operator and the `.transpose()` method to create the adjacency matrix $M = AA^T$.\n",
     "- Print the matrix and take a look. It contains some entries that are different from 0 and 1. \n",
     "- Replace nonzero entries with 1s. Also, replace all diagonal entries with 0s since each node should not be connected to itself. Check your work by printing the matrix again.\n",
     "\n",
