Update from Colab. Fix typo in comments.

--- a/13 Social network analysis.ipynb
+++ b/13 Social network analysis.ipynb
@@ -1265,7 +1265,7 @@
       },
       "source": [
         "# Compute PageRank\n",
-        "# nx.pagerank eturns a dictionary\n",
+        "# nx.pagerank returns a dictionary\n",
         "pr = nx.pagerank(G, alpha=0.85)\n",
         "\n",
         "# Create list of PageRank values\n",
