Update from Colab. Add save to Google Drive warning, update output.

--- a/13 Social network analysis.ipynb
+++ b/13 Social network analysis.ipynb
@@ -28,6 +28,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "tP2_i15V-tDN",
+        "colab_type": "text"
+      },
+      "source": [
+        "__Before you start working on this notebook, save a copy to Google Drive!__"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "hide_cell": true,
         "id": "5JdP7pQu3kKN",
         "colab_type": "text"
@@ -252,11 +262,11 @@
       "metadata": {
         "id": "tqJGkv9b3kLM",
         "colab_type": "code",
+        "outputId": "d523e8bf-e96b-402e-c499-e3a1ceb7fe76",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
-        },
-        "outputId": "3864e0a8-c9ad-46eb-f37d-273cf6e02e73"
+        }
       },
       "source": [
         "# Check your work\n",
@@ -312,11 +322,11 @@
       "metadata": {
         "id": "PNXpXv1D3kLT",
         "colab_type": "code",
+        "outputId": "af5c7542-ba58-4004-c7f7-0a9c8964b545",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "69b2e164-1447-484a-b2bd-3a7a71883733"
+        }
       },
       "source": [
         "# Check your work\n",
@@ -360,11 +370,11 @@
       "metadata": {
         "id": "AvUKyO5B3kLX",
         "colab_type": "code",
+        "outputId": "09fedbe6-429a-4b08-84e9-7f72451366f7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
-        },
-        "outputId": "052f2d97-f303-4b12-d834-6a4674e03696"
+        }
       },
       "source": [
         "# Grab 0-1 matrix from the variable data we created above\n",
@@ -408,11 +418,11 @@
       "metadata": {
         "id": "1O7dNiQk3kLa",
         "colab_type": "code",
+        "outputId": "8c5322a3-b2ea-48a7-9ce2-1901b3b19a23",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "6954539d-2340-4133-e94a-2740c846a9e8"
+        }
       },
       "source": [
         "import numpy as np\n",
@@ -473,11 +483,11 @@
       "metadata": {
         "id": "RFrS30d43kLe",
         "colab_type": "code",
+        "outputId": "b538d42b-d36c-45fe-fdda-5ea48dd42168",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 136
-        },
-        "outputId": "96714998-2894-4f14-8c29-5bdf37fdf8a2"
+        }
       },
       "source": [
         "# Compute M\n",
@@ -508,11 +518,11 @@
       "metadata": {
         "id": "usbaGnFm3kLh",
         "colab_type": "code",
+        "outputId": "8f488b41-b612-4b7b-95ee-f326cf50edd6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 136
-        },
-        "outputId": "2ea8c4b7-f9db-4e6b-ba2a-37f055cd832d"
+        }
       },
       "source": [
         "# Get size of matrix\n",
@@ -574,11 +584,11 @@
       "metadata": {
         "id": "ViEVxYWo3kLo",
         "colab_type": "code",
+        "outputId": "40059e9a-5472-40ff-eac6-dea32b948860",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "eaf3936c-0766-4a7b-90b3-879887d6e2fe"
+        }
       },
       "source": [
         "import networkx as nx\n",
@@ -634,11 +644,11 @@
       "metadata": {
         "id": "7GxzMLKF3kLt",
         "colab_type": "code",
+        "outputId": "b87265cd-27ad-4897-ed31-09a5455bcd2f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "db517335-acfd-4eb8-b340-b14e6f70a937"
+        }
       },
       "source": [
         "# Compute N\n",
@@ -688,11 +698,11 @@
       "metadata": {
         "id": "U2JeI2n43kLx",
         "colab_type": "code",
+        "outputId": "119b1f55-213d-4b00-f0dd-e690fe55eca8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "38fda293-33af-41b8-dcca-44f7d0f0b6d1"
+        }
       },
       "source": [
         "# Define variables for  name, rank and value\n",
@@ -754,11 +764,11 @@
       "metadata": {
         "id": "xI1KSoz23kL1",
         "colab_type": "code",
+        "outputId": "ab6c6be1-9703-4a08-cc71-97154c543270",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "9014017d-f093-44e7-8009-6fd256ef1632"
+        }
       },
       "source": [
         "# Print table heading\n",
@@ -813,11 +823,11 @@
       "metadata": {
         "id": "jWzQxzE43kL5",
         "colab_type": "code",
+        "outputId": "27442c21-88b7-46a9-bced-3801f03a68bb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "59d61a15-f130-4006-85fe-922955b1568b"
+        }
       },
       "source": [
         "# Define sample list of values\n",
@@ -879,11 +889,11 @@
       "metadata": {
         "id": "BQEKJczS3kL-",
         "colab_type": "code",
+        "outputId": "48e7ba39-96b1-40f7-f169-39d4334dec1c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 102
-        },
-        "outputId": "10158cc9-d0fc-4209-e985-fb232a6a2472"
+        }
       },
       "source": [
         "# Get indices of how the normalized degree \n",
@@ -943,11 +953,11 @@
       "metadata": {
         "id": "sAcm4ZJV3kMC",
         "colab_type": "code",
+        "outputId": "8d9e98a0-1cb4-429a-85ae-a1a53badd1e5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
-        },
-        "outputId": "0c31afee-e24a-45ab-a58b-b30f3cf62462"
+        }
       },
       "source": [
         "# Print table heading\n",
@@ -1014,11 +1024,11 @@
       "metadata": {
         "id": "_5QiuF5J3kMF",
         "colab_type": "code",
+        "outputId": "478c72ce-4442-4cbc-82c6-a4bb35b541ca",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
-        },
-        "outputId": "dd361f83-d99e-43a2-a6d8-35dfbd352d35"
+        }
       },
       "source": [
         "def foutput(measure_list, measure_name, name_list, many=5):\n",
@@ -1114,11 +1124,11 @@
       "metadata": {
         "id": "XI9gdaVW3kMK",
         "colab_type": "code",
+        "outputId": "3f97e12d-0384-4270-d996-d91c7b716600",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
-        },
-        "outputId": "4b40c083-44b8-4251-9451-24a110678120"
+        }
       },
       "source": [
         "foutput(closeness_list, 'closeness', names, 5)"
@@ -1168,11 +1178,11 @@
       "metadata": {
         "id": "mqkbbMiq3kMN",
         "colab_type": "code",
+        "outputId": "4befe5e8-4b61-4ab8-f3b2-e992ec46635c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 122
-        },
-        "outputId": "eac2821e-78a1-4e17-93be-e6c20cdb2f10"
+        }
       },
       "source": [
         "# Find a shortest path betwteen nodes 10 and 250\n",
@@ -1257,11 +1267,11 @@
       "metadata": {
         "id": "Miafhb4P3kMT",
         "colab_type": "code",
+        "outputId": "d664b6cc-72d2-43b4-f1a8-746316f06fa5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
-        },
-        "outputId": "6bded3b9-a99e-4f19-d98c-19c2a30e8985"
+        }
       },
       "source": [
         "# Compute PageRank\n",
@@ -1419,11 +1429,11 @@
       "metadata": {
         "id": "4z5iZtcP3kMd",
         "colab_type": "code",
+        "outputId": "76482c34-b5c8-42ac-aeaf-e875ec4837ab",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "4f10ef76-6343-44e6-aa6a-d2ca9bce086f"
+        }
       },
       "source": [
         "# Compare our v with the output from pagerank\n",
@@ -1436,7 +1446,7 @@
         {
           "output_type": "stream",
           "text": [
-            "The difference in 2-norm between our v and the output from the Networkx PageRank algorithm is 5.5648224597774704e-05.\n"
+            "The difference in 2-norm between our v and the output from the Networkx PageRank algorithm is 5.562490403141825e-05.\n"
           ],
           "name": "stdout"
         }
